test commit vs code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <button class="buttonexploration">Explorer nos restaurants</button>           
                 </section>
             </header>
-            
+            <div></div>
                 <main>
                 <section class="process">
                     <h2 class="h2-fonctionnement">Fonctionnement</h2>
