--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             <meta name="theme-color" content="#ffffff">
         </head>
         <body>
-            <!-- Header -->
-
             <header>
                 <div class="header">
                     <img src="images/logo/ohmyfood@2x.svg" alt="logo du site">
@@ -94,21 +92,21 @@
                 </section>
             </main>
         <footer class="footer">
-            <h2>ohmyfood</h2>
-            <ul class="footer__nav">
-                <li>
-                    <a href="#">Proposer un restaurant</a>
-                </li>
-                <li>
-                    <a href="#">Devenir partenaire</a>
-                </li>
-                <li>
-                    <a href="#">Mentions légales</a>
-                </li>
-                <li>
-                    <a href="mailto:adresse@serveur.com">Contact</a>
-                </li>
-                </ul>
+            <img src="images/logo/ohmyfood.png" alt="logo du site">
+                <ul class="footer__nav">
+                    <li>
+                        <a href="#">Proposer un restaurant</a>
+                    </li>
+                    <li>
+                        <a href="#">Devenir partenaire</a>
+                    </li>
+                    <li>
+                        <a href="#">Mentions légales</a>
+                    </li>
+                    <li>
+                        <a href="mailto:adresse@serveur.com">Contact</a>
+                    </li>
+                    </ul>
         </footer>
             
         </body>
