--- a/index.html
+++ b/index.html
@@ -34,25 +34,62 @@
                 <main>
                 <section class="process">
                     <h2 class="h2-fonctionnement">Fonctionnement</h2>  
-                    <button class="btn"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</button>
+                    <article>
                         <div class="fonctionnement-number">1</div>
-                    <button class="btn"><i class="fa-solid fa-ellipsis-vertical"></i><i class="fa-solid fa-bars"></i>Composez votre menu</button>
+                        <button class="btn"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</button>
+                    </article>
+                    <article>
+                        <div class="fonctionnement-number">2</div>
+                        <button class="btn"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</button>
+                    </article>
+                    <article>
+                        <div class="fonctionnement-number">3</div>
+                        <button class="btn"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</button>
+                    </article>
+                    <!-- <button class="btn"><i class="fa-solid fa-ellipsis-vertical"></i><i class="fa-solid fa-bars"></i>Composez votre menu</button>
                         <div class="fonctionnement-numbe">2</div>
                         
                     <button class="btn"><i class="fa-solid fa-store"></i>Dégustez au restaurant</button>
-                        <div class="fonctionnement-numbe">3</div>
+                        <div class="fonctionnement-numbe">3</div> -->
                 </section>
                 <section class="restaurant">
                     <h2>Restaurants</h2>
-                        <div class="card">
-                            <a class="new" href="laPaletteDuGout.html">
-                                <img class="img-card" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur plaque en céramique blanche">
-                                <div class="card__info">
-                                    <h3>La palette du goût<span class="card__info__heart"></span></h3>
-                                    <p class="p-card">Ménilmontant</p>
-                                </div>
-                            </a>
-                        </div>        
+                    <div class="card">
+                        <a class="new" href="/Restaurants/laPaletteDuGout.html">
+                            <img class="img-card" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur plaque en céramique blanche">
+                            <div class="card__info">
+                                <h3>La palette du goût<span class="card__info__heart"></span></h3>
+                                <p class="p-card">Ménilmontant</p>
+                            </div>
+                        </a>
+                    </div>        
+                    <div class="card">
+                        <a class="new" href="/Restaurants/laNoteEnchantee.html">
+                            <img class="img-card" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur plaque en céramique blanche">
+                            <div class="card__info">
+                                <h3>La note enchantée<span class="card__info__heart"></span></h3>
+                                <p class="p-card">Charonne</p>
+                            </div>
+                        </a>
+                    </div>        
+                    <div class="card">
+                        <a class="new" href="aLaFrancaise.html">
+                            <img class="img-card" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat sur plaque en céramique blanche">
+                            <div class="card__info">
+                                <h3>A la Française<span class="card__info__heart"></span></h3>
+                                <p class="p-card">Cité rouge</p>
+                            </div>
+                        </a>
+                    </div>        
+                    <div class="card">
+                        <a class="new" href="LeDeliceDesSens.html">
+                            <img class="img-card" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur plaque en céramique blanche">
+                            <div class="card__info">
+                                <h3>Le délice des sens<span class="card__info__heart"></span></h3>
+                                <p class="p-card">Folie-Méricourt</p>
+                            </div>
+                        </a>
+                    </div>        
                 </section>
             </main>
         <footer class="footer">
