--- a/Restaurants/LeDeliceDesSens.html
+++ b/Restaurants/LeDeliceDesSens.html
@@ -2,9 +2,10 @@
     <html lang="fr">
         <head>
             <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>La palette du goût</title>
-            <link rel="stylesheet" href="">
+            <title>Le délice des sens</title>
+            <link rel="stylesheet" href="../css/style.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
         </head>
         <body>
             
-            <header class="header">
+            <header class="header-r">
                 <a class="header__return" href="../index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
@@ -26,31 +27,31 @@
             </header>
 
             <main class="main">
-                <img class="main__banner" src="../assets/restaurants/large/jay-wennington-N_Y88TWmGwA-unsplash__large.jpg" alt="Plat sur plaque en céramique blanche">
+                <img class="main__banner" src="../assets/restaurants/large/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash__large.jpg" alt="Dos de cabillaud sur lit de légumes">
                 <section class="main__menu">
-                    <h2 class="main__menu__title">La palette du goût<span class="heart"></span></h2>
+                    <h2 class="main__menu__title">Le délice des sens<span class="heart"></span></h2>
                     <div class="main__menu__starter">
                         <h3>Entrées</h3>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Fricassée d'escargot</h4>
-                                <p>Au piment d'espelette </p>
+                                <h4>Tartare de thon</h4>
+                                <p>Assaisonné au yuzu</p>
                             </div>
                             <p class="meal__price">25€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Foie gras de canard mi-cuit</h4>
-                                <p>Et ses copeaux de truffe noire</p>
+                                <h4>Bouchée de homard croustillant</h4>
+                                <p>Et sa farandole de petits légumes</p>
                             </div>
                             <p class="meal__price">35€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Oeuf au plat</h4>
-                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                                <h4>Velouté de cèpes</h4>
+                                <p>Aux truffes</p>
                             </div>
                             <p class="meal__price">20€</p>
                             <div class="meal__check"></div>
@@ -60,24 +61,24 @@
                         <h3>Plats</h3>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Filet de boeuf aux herbes</h4>
-                                <p>Accompagné de sa ribambelle de légumes</p>
+                                <h4>Poulet rôti aux herbes de Provence</h4>
+                                <p>Et sa crème de truffe</p>
                             </div>
                             <p class="meal__price">40€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Parmentier de queue de boeuf</h4>
-                                <p>À la truffe noire sur sa purée de panais</p>
+                                <h4>Langouste rôtie</h4>
+                                <p>Et ses légumes de saison</p>
                             </div>
                             <p class="meal__price">35€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Filet de turbot</h4>
-                                <p>Aux agrumes</p>
+                                <h4>Côte de boeuf Angus</h4>
+                                <p>Et sa purée de panais</p>
                             </div>
                             <p class="meal__price">44€</p>
                             <div class="meal__check"></div>
@@ -87,24 +88,24 @@
                         <h3>Desserts</h3>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Paris-Brest</h4>
-                                <p>Revisité</p>
+                                <h4>Farandole de desserts</h4>
+                                <p>Du chef</p>
                             </div>
                             <p class="meal__price">18€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Macaron au chocolat d'exception</h4>
-                                <p>Et glace à la vanille de Madagascar</p>
+                                <h4>Crème brulée</h4>
+                                <p>Revisitée</p>
                             </div>
                             <p class="meal__price">22€</p>
                             <div class="meal__check"></div>
                         </div>
                         <div tabindex="0" class="meal">
                             <div class="meal__description">
-                                <h4>Mousse au chocolat</h4>
-                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                <h4>Tiramisu</h4>
+                                <p>À la noisette</p>
                             </div>
                             <p class="meal__price">23€</p>
                             <div class="meal__check"></div>                         
